--- a/configuracion-notificaciones.html
+++ b/configuracion-notificaciones.html
@@ -61,7 +61,7 @@
 						<a href="construccion.html" class="image full"><img src="images/instalar.png" alt="" /></a><br>
 					</div>
                     <div class="4u">
-						<h2>Notificaciones</h2>
+						<h2>Notificaciones activadas</h2>
 						<a href="configuracion.html" class="image full"><img src="images/ahorro.png" alt="" /></a><br>
 					</div>
 				</div>
