--- a/configuracion.html
+++ b/configuracion.html
@@ -61,7 +61,7 @@
 						<a href="construccion.html" class="image full"><img src="images/instalar.png" alt="" /></a><br>
 					</div>
                     <div class="4u">
-						<h2>Notificaciones</h2>
+						<h2>Notificaciones desactivadas</h2>
 						<a href="configuracion-notificaciones.html" class="image full"><img src="images/noahorro.png" alt="" /></a><br>
 					</div>
 				</div>
